# find_home_bot

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci-cd.yml  deploy.yml
docs/: LAUNCH.md
docs/architecture/: architecture-approach.md
scripts/: deploy.sh
src/: config.py  main.py
src/bot/: formatter.py  handlers.py  keyboards.py
src/data/: cities.py
src/parser/: avito.py  base.py  cian.py  models.py  yandex_realty.py
src/scheduler/: monitor.py
src/storage/: database.py
src/webapp/: __init__.py  routes.py  validation.py
src/webapp/static/: index.html
tests/: conftest.py  test_base.py  test_cian.py  test_cities.py  test_database.py  test_formatter.py  test_handlers.py  test_keyboards.py  test_models.py  test_monitor.py  test_webapp_validation.py  test_yandex.py
