[project]
name = "cian-rental-bot"
version = "1.0.0"
description = "Telegram-бот для мониторинга объявлений аренды жилья на ЦИАН"
requires-python = ">=3.9"
dependencies = [
    "aiogram>=3.15",
    "aiohttp>=3.11",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "aiosqlite>=0.20",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[project.scripts]
rental-bot = "src.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=40"
